--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "areq": "^0.2.0",
     "async": "^2.5.0",
     "busyman": "^0.3.0",
-    "cc-znp": "https://github.com/athombv/cc-znp.git#production",
+    "cc-znp": "https://github.com/athombv/cc-znp.git#e7143dade2a1d1162267eeaa8b0381b05af3af46",
     "debug": "^2.6.3",
     "objectbox": "^0.3.0",
     "proving": "^0.1.0",
